<resources>
    <string name="app_name">My Application</string>
    <string name="FinSafe">FinSafe</string>
    <string name="username">Username</string>
    <string name="email">username@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general">General</string>
    <string name="mode_hitam">Mode Hitam</string>
    <string name="logout">Keluar</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="rp">Rp</string>
    <string name="jumlah_pengeluaran">7.000.000,00</string>
    <string name="prediksi_pengeluaranku">PREDIKSI PENGELUARAN KU</string>
    <string name="register">Register</string>


    <!-- Login Stuff-->
    <string name="fill_data">Tolong isi data dengan benar</string>
    <string name="login">Login</string>
    <string name="Selamat_datang">Selamat datang kembali</string>
    <string name="Masukan_data">Masukan datamu untuk masuk ke dalam aplikasi</string>
    <string name="nama_pengguna">Nama</string>
    <string name="Kata_sandi">Kata sandi</string>
    <string name="forget_password">Lupa kata sandi</string>
    <string name="Enter">Masuk</string>
    <string name="login_success">login berhasil</string>

    <!-- Picture-->

    <!-- Custom EditText-->
    <string name="error_email">Format email salah</string>
    <string name="error_password">Masukan minimal 8 char</string>
    <string name="tabungan_idealku">Tabungan Ideal Ku</string>
    <string name="dana_darurat">Rekomendasi Dana Darurat</string>
    <string name="emailTextView">Email</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Masukan password kembali</string>
    <string name="daftar">Daftar</string>
    <string name="sudahadaakun">Sudah memiliki akun?</string>
    <string name="selamat">Selamat</string>
    <string name="welcome2">Mari masuk untuk memulai \nperjalananmu</string>
    <string name="mulai">mulai</string>
    <string name="ayo_mulai">Ayo Mulai !</string>
    <string name="landingpage3">Pilih untuk memulai untuk perjalanan\ntabungan mu</string>
    <string name="error_message">Sesuatu ada yang Salah\nMohoh dicoba kembali</string>
    <string name="ok">Oke</string>
    <string name="response_image">gambar respon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dana_darurat_jumlah">7.000.000,00</string>
    <string name="selamatDatang">Selamat datang,</string>
    <string name="kepalaRumah">Informasi Kepala Rumah Tangga</string>
    <string name="usiaRumah">Usia Kepala Rumah Tangga</string>
    <string name="lihat_jumlah_tabungan">Ayo lihat detailnya !</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="username_home">Velman noela harefa</string>

    <!-- drop down menu-->
    <string-array name="informasi_kepala_keluarga">
        <item>Laki - laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="status_perkawinan">
        <item>Bercerai/Berpisah/Dibatalkan</item>
        <item>Menikah</item>
        <item>Lajang</item>
        <item>Tidak Diketaui</item>
    </string-array>

    <string-array name="pendidikan_kepala_rumah_tangga">
        <item>Sekolah dasar</item>
        <item>SMP/SMA</item>
        <item>S1</item>
        <item>S2</item>
        <item>Program sertifikasi</item>
    </string-array>

    <string-array name="sumber_pendapatan_utama">
        <item>Wirausaha</item>
        <item>Sumber Pendapatan Lain</item>
        <item>Upah/gaji</item>
    </string-array>

    <string-array name="provinsi_domisili">
        <item>Nangroe Aceh Darussalam</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Selatan</item>
        <item>Sumatera Barat</item>
        <item>Bengkulu</item>
        <item>Riau</item>
        <item>Kepulauan Riau</item>
        <item>Jambi</item>
        <item>Lampung</item>
        <item>Bangka belitung</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan timur</item>
        <item>Kalimantan selatan</item>
        <item>Kalimantan tengah</item>
        <item>Kalimantan utara</item>
        <item>Banten</item>
        <item>Jakarta</item>
        <item>Jawa barat</item>
        <item>Jawa tengah</item>
        <item>jogja</item>
        <item>Jawa timur</item>
        <item>Bali</item>
        <item>NTT</item>
        <item>NTB</item>
        <item>Gorontalo</item>
        <item>Sulawesi barat</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi tenggara</item>
        <item>Sulawesi selatan</item>
        <item>Maluku utara</item>
        <item>Maluku</item>
        <item>Papua barat</item>
        <item>Papua</item>
        <item>Papua tengah</item>
        <item>Papua pegunungan</item>
        <item>Papua selatan</item>
        <item>Papua barat daya</item>
    </string-array>

    <string-array name="listrik">
        <item>ya</item>
        <item>tidak</item>
    </string-array>

    <string-array name="status_tempat_tinggal">
        <item>Milik sendiri</item>
        <item>Kontrak</item>
        <item>Sewa</item>
        <item>Rumah dinas</item>
        <item>Rumah orang tua</item>
        <item>Lainnya</item>
    </string-array>

    <string-array name="anak">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="mobil">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="motor">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="television">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="air_conditioner">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="komputer">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="hp">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="kulkas">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="mesin_cuci">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="dana_darurat">
        <item>ya</item>
        <item>tidak</item>
    </string-array>

    <string-array name="hutang">
        <item>ya</item>
        <item>tidak</item>
    </string-array>

    <string-array name="tipe_bangunan">
        <item>Bangunan komersial</item>
        <item>Bangunan apartemen untuk dua rumah tangga berbeda</item>
        <item>Tempat tinggal institusional</item>
        <item>Perumahan multi unit</item>
        <item>Unit bangunan lainnya</item>
        <item>Rumah tunggal</item>
    </string-array>

    <string-array name="tipe_rt">
        <item>Keluarga besar</item>
        <item>Keluarga tunggal</item>
        <item>Dua atau lebih orang/anggota yang tidak berhubungan</item>
    </string-array>

    <!-- register stuff-->
    <string name="register2">Berikutnya -></string>
</resources>