<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_background_2"
    android:padding="20dp">

    <ImageView
        android:contentDescription="@string/response_image"
        android:id="@+id/ivResponse"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/baseline_error_outline_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvResponse"
        android:text="@string/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        style="@style/interSemiBold"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ivResponse"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnDismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResponse"
        android:textColor="@color/white"
        android:text="@string/ok"
        android:textAllCaps="true"/>>

</androidx.constraintlayout.widget.ConstraintLayout>