<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".ui.landingPage.LandingThirdActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/landing_page_3"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayo_mulai"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/kalimat_landingpage_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landingpage3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/judul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/register"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/purple"
        android:backgroundTint="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintTop_toBottomOf="@id/kalimat_landingpage_3"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/kalimat_landingpage_3"
        app:layout_constraintStart_toEndOf="@id/register"/>


</androidx.constraintlayout.widget.ConstraintLayout>