<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterSuccessActivity">

    <ImageView
        android:id="@+id/welcome"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/welcome"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/selamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:text="@string/welcome2"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/selamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/mulai"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/welcome2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>